--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-hooks-global-state": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
