--- a/package.json
+++ b/package.json
@@ -4,6 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://fandi-ahmad.github.io/",
+  "main": "main.js",
+  "build": {
+    "appId": "fandi-ahmad.github.io",
+    "productName": "portofolio-fandi",
+    "directories": {
+      "output": "electron-dist"
+    },
+    "win": {
+      "target": "nsis"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +22,10 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "test": "serve dist"
+    "test": "serve dist",
+    "electron-start": "electron .",
+    "electron-build": "electron-builder",
+    "start": "npm run dev && npm run electron-start"
   },
   "dependencies": {
     "gh-pages": "^6.0.0",
@@ -27,6 +41,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.2",
+    "electron": "^28.2.1",
+    "electron-builder": "^24.9.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
